
Legend:

* -> Security Fix
# -> Issue Fix
$ -> Language fix or change
+ -> Addition
^ -> Change
- -> Removed
! -> Note

12-Jul-2011 Mark Dexter
 # [#26075] Update FancyUpload to version 3.0.1.
 # [#26368] Fix typo in concatenate for mysql and mysqli drivers
 # [#25950] "active" class attribute for Module Category List View
 # [#26372] Add some WAI-ARIA and HTML5 to the form validator.

12-Jul-2011 Jean-Marie Simonet
 $ Updating installation ini files: bn-BD, bs-BA, pt-BR
 # Updating administrator/language/en-GB/en-GB.xml
 $ Updating installation ini files: ja-JP (TT change)
 # [#26374] "Category Order" isn't applied to Category Blog layout. Thanks Dennis.
 $ Updating installation ini files: zh-TW
 $ Updating installation ini files: hu-HU
 $ Updating installation ini files: fi-FI
 $ Correcting some ini files (1.6 instead of 1.7), alpha ordering.
 # Correcting typo in mod_toolbar.xml
 $ Corrected en-GB, en-AU, en-US installation inis using 'prefix database 'instead of 'table prefix' in strings.

11-Jul-2011 Christophe Demko
 # [#26355] In a multi-language site, when navigation is enabled, articles tagged for other languages are also shown in addition to the language that is being viewed

11-Jul-2011 Mark Dexter
 # [#26344] Fix PHP strict warning in MenusModelMenu

11-Jul-2011 Jean-Marie Simonet
 # [#26315] Pagebreak plugin running in unexpected places plus an improvement. Thanks Elin, Christophe. + Alpha reordering of en-GB.plg_content_pagebreak.ini
 $ Updating installation ini files: nl-NL
 $ Updating installation ini files: be-BY, pl-PL, th-TH, zh-CN
 # [#26370] Remove the module position preview icons if the option is disabled. (in fact changed the icons)
 # [#26366] Platform Catchup: Can't get parameters for a module using getModule. Thanks Elin.
 # [#26365] Plugin Helper performance improvements from platform. Thanks Elin.

10-Jul-2011 Christophe Demko
 # [#26346] Sync some changes from the platforum (Rouven Weßling)